--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,20 @@ services:
     env_file:
       - .env
 
+  socket_app:
+    build: ./socket_app
+    ports:
+      - "1025:1025"
+    environment:
+      - PYTHONPATH=/app
+    volumes:
+      - ./common:/app/common
+      - ./config.py:/app/config.py
+    networks:
+      - swipe_network
+    env_file:
+      - .env
+
 networks:
   swipe_network:
     driver: bridge
