--- a/socket_app/requirements.txt
+++ b/socket_app/requirements.txt
@@ -2,3 +2,19 @@ python-socketio
 eventlet
 websocket-client
 uvicorn
+fastapi
+libclang
+numpy
+pydantic
+pydantic_core
+PyJWT
+pywatchman
+requests
+requests-oauthlib
+typing_extensions
+urllib3
+uvicorn
+sqlalchemy
+python-dotenv==1.0.0
+psycopg2
+psycopg2-binary
