--- a/push_app/Dockerfile
+++ b/push_app/Dockerfile
@@ -1,7 +1,7 @@
 # Use an official Python runtime as a parent image
-FROM python:3.9-slim
+FROM python:3.11
 
-# Set the working directory in the container to /app
+# Set the working directory in the container
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
@@ -11,10 +11,7 @@ COPY . /app
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
 # Make port 80 available to the world outside this container
-EXPOSE 1040
+EXPOSE 1026
 
-# Define environment variable
-ENV NAME World
-
-# Run app.py when the container launches
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "1040"]
+# Run your application
+CMD ["python", "app.py"]
