--- a/main_app/requirements.txt
+++ b/main_app/requirements.txt
@@ -1,18 +1,14 @@
 fastapi
-libclang
 numpy
 pydantic
-pydantic_core
 PyJWT
-pywatchman
 requests
 requests-oauthlib
 typing_extensions
 urllib3
 uvicorn
 sqlalchemy
-python-dotenv==1.0.0
-psycopg2
+python-dotenv
 psycopg2-binary
 python-socketio
 eventlet
@@ -21,3 +17,4 @@ boto3
 python-multipart
 python-magic
 dadata
+asyncpg
