--- a/push_app/requirements.txt
+++ b/push_app/requirements.txt
@@ -1,98 +1,96 @@
-absl-py==1.4.0
-aiofiles==23.2.1
-aiohttp==3.8.5
-aiosignal==1.3.1
-annotated-types==0.5.0
-anyio==3.7.1
-astunparse==1.6.3
-async-timeout==4.0.3
-attrs==23.1.0
-bidict==0.22.1
-boto3==1.28.53
-botocore==1.31.53
-CacheControl==0.13.1
-cachetools==5.3.1
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-click==8.1.7
-cryptography==41.0.3
-dnspython==2.4.2
-eventlet==0.33.3
-fastapi==0.103.0
-firebase-admin==6.2.0
-flatbuffers==23.5.26
-frozenlist==1.4.0
-gast==0.4.0
-google-api-core==2.12.0
-google-api-python-client==2.102.0
-google-auth==2.22.0
-google-auth-httplib2==0.1.1
-google-auth-oauthlib==1.0.0
-google-cloud-core==2.3.3
-google-cloud-firestore==2.12.0
-google-cloud-storage==2.11.0
-google-crc32c==1.5.0
-google-pasta==0.2.0
-google-resumable-media==2.6.0
-googleapis-common-protos==1.60.0
-greenlet==2.0.2
-grpcio==1.59.0
-grpcio-status==1.59.0
-httpcore==0.18.0
-httplib2==0.22.0
-httpx==0.25.0
-idna==3.4
-jmespath==1.0.1
-joblib==1.3.2
-jwt==1.3.1
-libclang==16.0.6
-loadenv==0.1.1
-Markdown==3.4.4
-MarkupSafe==2.1.3
-msgpack==1.0.7
-multidict==6.0.4
-netifaces==0.10.6
-numpy==1.24.3
-oauthlib==3.2.2
-opt-einsum==3.3.0
-packaging==23.1
-pandas==2.1.0
-proto-plus==1.22.3
-protobuf==4.23.3
-psycopg2==2.9.7
-psycopg2-binary==2.9.7
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydantic==2.3.0
-pydantic_core==2.6.3
-PyJWT==2.8.0
-pyparsing==3.1.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-engineio==4.7.1
-python-magic==0.4.27
-python-socketio==5.9.0
-pytz==2023.3
-pywatchman==1.4.1
-requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
-s3transfer==0.6.2
-simple-websocket==0.10.1
-six==1.16.0
-sniffio==1.3.0
-socketio==0.2.1
-SQLAlchemy==2.0.20
-termcolor==2.3.0
-threadpoolctl==3.2.0
-typing_extensions==4.7.1
-tzdata==2023.3
-uritemplate==4.1.1
-urllib3==1.26.16
-uvicorn==0.23.2
-Werkzeug==2.3.7
-wrapt==1.15.0
-wsproto==1.2.0
-yarl==1.9.2
+absl-py
+aiofiles
+aiohttp
+aiosignal
+annotated-types
+anyio
+astunparse
+async-timeout
+attrs
+bidict
+boto3
+botocore
+CacheControl
+cachetools
+certifi
+cffi
+charset-normalizer
+click
+cryptography
+dnspython
+eventlet
+fastapi
+firebase-admin
+flatbuffers
+frozenlist
+gast
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
+google-cloud-core
+google-cloud-firestore
+google-cloud-storage
+google-crc32c
+google-pasta
+google-resumable-media
+googleapis-common-protos
+greenlet
+grpcio
+grpcio-status
+httpcore
+httplib2
+httpx
+idna
+jmespath
+joblib
+jwt
+loadenv
+Markdown
+MarkupSafe
+msgpack
+multidict
+netifaces
+numpy
+oauthlib
+opt-einsum
+packaging
+pandas
+proto-plus
+protobuf
+pyasn1
+pyasn1-modules
+pycparser
+pydantic
+pydantic_core
+PyJWT
+pyparsing
+python-dateutil
+python-dotenv
+python-engineio
+python-magic
+python-socketio
+pytz
+requests
+requests-oauthlib
+rsa
+s3transfer
+simple-websocket
+six
+sniffio
+socketio
+SQLAlchemy
+termcolor
+threadpoolctl
+typing_extensions
+tzdata
+uritemplate
+urllib3
+uvicorn
+Werkzeug
+wrapt
+wsproto
+yarl
+asyncpg
+psycopg2
