add push notify for online users

--- a/push_app/requirements.txt
+++ b/push_app/requirements.txt
@@ -1,29 +1,4 @@
-absl-py
-aiofiles
-aiohttp
-aiosignal
-annotated-types
-anyio
-astunparse
-async-timeout
-attrs
-bidict
-boto3
-botocore
-CacheControl
-cachetools
-certifi
-cffi
-charset-normalizer
-click
-cryptography
-dnspython
-eventlet
-fastapi
 firebase-admin
-flatbuffers
-frozenlist
-gast
 google-api-core
 google-api-python-client
 google-auth
@@ -36,61 +11,22 @@ google-crc32c
 google-pasta
 google-resumable-media
 googleapis-common-protos
-greenlet
-grpcio
-grpcio-status
-httpcore
-httplib2
-httpx
-idna
-jmespath
-joblib
-jwt
-loadenv
-Markdown
-MarkupSafe
-msgpack
-multidict
-netifaces
+fastapi
 numpy
-oauthlib
-opt-einsum
-packaging
-pandas
-proto-plus
-protobuf
-pyasn1
-pyasn1-modules
-pycparser
 pydantic
-pydantic_core
 PyJWT
-pyparsing
-python-dateutil
-python-dotenv
-python-engineio
-python-magic
-python-socketio
-pytz
 requests
 requests-oauthlib
-rsa
-s3transfer
-simple-websocket
-six
-sniffio
-socketio
-SQLAlchemy
-termcolor
-threadpoolctl
 typing_extensions
-tzdata
-uritemplate
 urllib3
 uvicorn
-Werkzeug
-wrapt
-wsproto
-yarl
+sqlalchemy
+python-dotenv
+psycopg2-binary
+python-socketio
+eventlet
+websocket-client
+python-multipart
+python-magic
 asyncpg
-psycopg2
+boto3
