--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ ecosystem.config.js
 __pycache__
 /common/utils/swipe-5da7e-firebase-adminsdk-uiosd-e4d43db1df.json
 /common/utils/best_model.pkl
+venv
