verify bot fixes

--- a/verify_bot_app/requirements.txt
+++ b/verify_bot_app/requirements.txt
@@ -1,4 +1,27 @@
-python-telegram-bot
+fastapi
+numpy
+pydantic
+PyJWT
+requests
+requests-oauthlib
+typing_extensions
+urllib3
+uvicorn
+sqlalchemy
+python-dotenv
+psycopg2-binary
+python-socketio
+eventlet
+websocket-client
+boto3
+python-multipart
+python-magic
+dadata
+asyncpg
+joblib
+pandas
+scikit-learn==1.3.0
+python-telegram-bot==13.9
 pyTelegramBotAPI
 requests
 uvicorn
