--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -44,12 +44,16 @@ jobs:
         docker-compose build -j 4
         docker-compose push
 
-    - name: Add SSH key to known_hosts
+    - name: Setup SSH key and agent
       run: |
+        eval $(ssh-agent -s)
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key
-        echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add private_key
         chmod 600 private_key
-        ssh-agent bash -c 'ssh-add private_key'
+        echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add private_key
+
+    - name: Add server to known_hosts
+      run: |
+        ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
     - name: Deploy to server
       run: |
