--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -49,6 +49,7 @@ jobs:
         eval $(ssh-agent -s)
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key
         chmod 600 private_key
+        echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add private_key
 
     - name: Add server to known_hosts
       run: |
