--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Setup SSH key and agent
       run: |
         eval $(ssh-agent -s)
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" | ssh-add -
         chmod 600 private_key
         echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add private_key
 
