--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -47,9 +47,9 @@ jobs:
     - name: Setup SSH key and agent
       run: |
         eval $(ssh-agent -s)
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ssh-add -
         chmod 600 private_key
-        ssh-add private_key
+        echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add private_key
 
     - name: Add server to known_hosts
       run: |
