--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -58,4 +58,4 @@ jobs:
 
     - name: Deploy to server
       run: |
-        ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "cd /swipe_api && docker-compose pull && docker-compose up -d"
+        ssh -v -oHostKeyAlgorithms=+ssh-dss ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "cd /swipe_api && docker-compose pull && docker-compose up -d"
