--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -44,21 +44,19 @@ jobs:
         docker-compose build -j 4
         docker-compose push
 
-    - name: Setup SSH key and agent
-      run: |
-        eval $(ssh-agent -s)
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key
-        chmod 600 private_key
-        echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add private_key
-
     - name: Add server to known_hosts
       run: |
         mkdir -p ~/.ssh
         ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
-    - name: Install sshpass
-      run: sudo apt-get install -y sshpass
-
-    - name: Deploy to server
-      run: |
-        ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "cd swipe_api && docker-compose pull && docker-compose up -d"
+    - name: Deploy to server using SSH action
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        passphrase: ${{ secrets.SSH_PASSPHRASE }}
+        script: |
+          cd swipe_api
+          docker-compose pull
+          docker-compose up -d
