--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -53,6 +53,7 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_CHAT_ID }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
+        message_thread_id: 25
         message: |
           Build ${{ github.run_id }} of ${{ github.repository }} by ${{ github.actor }} completed.
           Status: ${{ job.status }}.
