fix get chat info && ci/cd

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -42,7 +42,9 @@ jobs:
 
     - name: Build Docker image
       run: |
+        docker-compose down
         docker-compose build -j 4
+        docker-compose up -d
 
     - name: Run tests (replace with your test command)
       run: |
