--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -43,7 +43,9 @@ jobs:
 
     - name: Build and push Docker image
       run: |
+        docker-compose down
         docker-compose build -j 4
+        docker-compose up -d
         docker-compose push
 
     - name: Add server to known_hosts
