--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -13,6 +13,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Get the version
+      id: vars
+      run: echo ::set-output name=version::$(echo $(git rev-parse --short HEAD))
+
     - name: Login to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
@@ -44,7 +48,7 @@ jobs:
     - name: Build and push Docker image
       run: |
         docker-compose down
-        docker-compose build -j 4
+        docker-compose build --no-cache -j 4
         docker-compose up -d
         docker-compose push
 
