--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -4,18 +4,14 @@ on: [push, pull_request]
 
 jobs:
   build:
+    name: Build ${{ matrix.service }} image
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        service: [main_app, socket_app, push_app, admin_app]
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
-    - name: Get the version
-      id: vars
-      run: echo ::set-output name=version::$(echo $(git rev-parse --short HEAD))
-
-    - name: Login to Docker Hub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
     - name: Create .env file
       run: |
@@ -42,39 +38,11 @@ jobs:
         echo SMS_CENTER_LOGIN=${{ secrets.SMS_CENTER_LOGIN }} >> .env
         echo SMS_CENTER_PASSWORD=${{ secrets.SMS_CENTER_PASSWORD }} >> .env
 
-    - name: Build and push main_app Docker image
+    - name: Build ${{ matrix.service }} Docker image
       run: |
-        docker build -t kirillka564/swipe_api:main_app-${{ steps.vars.outputs.version }} ./main_app
-        docker push kirillka564/swipe_api:main_app-${{ steps.vars.outputs.version }}
+        docker build -t kirillka564/swipe_api:${{ matrix.service }} ./${{ matrix.service }}
 
-    - name: Build and push socket_app Docker image
+    - name: Run tests (replace with your test command)
       run: |
-        docker build -t kirillka564/swipe_api:socket_app-${{ steps.vars.outputs.version }} ./socket_app
-        docker push kirillka564/swipe_api:socket_app-${{ steps.vars.outputs.version }}
-
-    - name: Build and push push_app Docker image
-      run: |
-        docker build -t kirillka564/swipe_api:push_app-${{ steps.vars.outputs.version }} ./push_app
-        docker push kirillka564/swipe_api:push_app-${{ steps.vars.outputs.version }}
-
-    - name: Build and push admin_app Docker image
-      run: |
-        docker build -t kirillka564/swipe_api:admin_app-${{ steps.vars.outputs.version }} ./admin_app
-        docker push kirillka564/swipe_api:admin_app-${{ steps.vars.outputs.version }}
-
-    - name: Add server to known_hosts
-      run: |
-        mkdir -p ~/.ssh
-        ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
-
-    - name: Deploy to server using SSH action
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        passphrase: ${{ secrets.SSH_PASSPHRASE }}
-        script: |
-          cd swipe_api
-          docker-compose pull
-          docker-compose up -d
+        # If you have a specific command to run tests, replace the echo command with it.
+        echo "Run your tests here. For example: docker-compose run --rm app your-test-command"
