--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Get the version
       id: vars
-      run: echo ::set-output name=version::$(echo $(git rev-parse --short HEAD))
+      run: echo "version=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
     - name: Login to Docker Hub using Token
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
