--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -23,9 +23,18 @@ jobs:
     - name: Login to Docker Hub using Token
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
+    - name: Cache Docker layers
+      uses: actions/cache@v3
+      with:
+        path: /tmp/docker-layers
+        key: ${{ runner.os }}-docker-${{ matrix.service }}-${{ steps.vars.outputs.version }}
+        restore-keys: |
+          ${{ runner.os }}-docker-${{ matrix.service }}-
+
     - name: Build and push ${{ matrix.service }} Docker image
       run: |
-        docker build -t kirillka564/swipe_api:${{ matrix.service }}-${{ steps.vars.outputs.version }} ./${{ matrix.service }}
+        docker build --cache-from=/tmp/docker-layers -t kirillka564/swipe_api:${{ matrix.service }}-${{ steps.vars.outputs.version }} ./${{ matrix.service }}
+        docker save -o /tmp/docker-layers ./${{ matrix.service }}
         docker push kirillka564/swipe_api:${{ matrix.service }}-${{ steps.vars.outputs.version }}
 
   deploy_to_server:
