--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -7,12 +7,14 @@ on:
       - 'socket_app/**'
       - 'push_app/**'
       - 'admin_app/**'
+      - '.github/workflows/*'
   pull_request:
     paths:
       - 'main_app/**'
       - 'socket_app/**'
       - 'push_app/**'
       - 'admin_app/**'
+      - '.github/workflows/*'
 
 jobs:
   build:
