--- a/main_app/Dockerfile
+++ b/main_app/Dockerfile
@@ -5,13 +5,14 @@ FROM python:3.11
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-COPY . /app
-
+COPY requirements.txt /app/
 # Install any needed packages specified in requirements.txt
-RUN pip install --trusted-host pypi.python.org -r requirements.txt
+RUN pip install --trusted-host pypi.python.org -r /app/requirements.txt
+
+COPY . /app
 
 # Make port 80 available to the world outside this container
 EXPOSE 1024
 
 # Run your application
-CMD ["python", "app.py"]
+CMD ["python", "/app/main_app/app.py"]
